# appa

./: .gitignore  README.md  bootstrap.sh  pyproject.toml
agents/claude/: settings.json
instructions/: commit_each_iteration_then_squash.md  descriptive_arg_names.md  fstring_logging.md  git_branching_workflow.md  gitignore_superpowers_docs.md  logging_pattern.md  no_code_blocks_in_plans.md  no_emojis_in_docs.md  no_module_docstrings.md  no_spec_commits.md  package_author_email.md  per_task_approval.md  plannotator_before_commit.md  python_union_type_syntax.md  stage_before_plannotator.md  tooling_stack.md  uv_native_build_backend.md  verify_live_api.md  writes_via_subagent.md
memory/snapshot/: MEMORY.md  feedback_commit_then_squash.md  feedback_gitignore_superpowers_docs.md  feedback_no_spec_commits.md  feedback_per_task_approval.md  feedback_plannotator_before_commit.md  feedback_uv_native_build_backend.md
src/appa_lib/: __init__.py  cli.py  encode_path.py  project_block.py  project_claude.py  project_pi.py  transform_pull.py
tests/: test_encode_path.py  test_project_block.py  test_project_claude.py  test_project_pi.py  test_transform_pull.py
