[project]
name = "appa"
version = "0.1.0"
description = "Portable coding-agent workflow"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
appa = "appa_lib.cli:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "appa_lib"
module-root = "src"

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
